[gd_scene load_steps=48 format=2]

[ext_resource path="res://script/player.gd" type="Script" id=1]
[ext_resource path="res://textures/Player/Sprinte/idle_0.png" type="Texture" id=2]
[ext_resource path="res://textures/Player/Sprinte/idle_1.png" type="Texture" id=3]
[ext_resource path="res://textures/Player/Sprinte/idle_2.png" type="Texture" id=4]
[ext_resource path="res://textures/Player/Sprinte/idle_3.png" type="Texture" id=5]
[ext_resource path="res://textures/Player/Sprinte/idle_4.png" type="Texture" id=6]
[ext_resource path="res://textures/Player/Sprinte/idle_5.png" type="Texture" id=7]
[ext_resource path="res://textures/Player/Sprinte/walk_0.png" type="Texture" id=8]
[ext_resource path="res://textures/Player/Sprinte/walk_1.png" type="Texture" id=9]
[ext_resource path="res://textures/Player/Sprinte/walk_2.png" type="Texture" id=10]
[ext_resource path="res://textures/Player/Sprinte/walk_3.png" type="Texture" id=11]
[ext_resource path="res://textures/Player/Sprinte/walk_4.png" type="Texture" id=12]
[ext_resource path="res://textures/Player/Sprinte/walk_5.png" type="Texture" id=13]
[ext_resource path="res://textures/Player/Sprinte/walk_6.png" type="Texture" id=14]
[ext_resource path="res://textures/Player/Sprinte/walk_7.png" type="Texture" id=15]
[ext_resource path="res://textures/Player/Sprinte/walk_flashlight_0.png" type="Texture" id=16]
[ext_resource path="res://textures/Player/Sprinte/walk_flashlight_1.png" type="Texture" id=17]
[ext_resource path="res://textures/Player/Sprinte/walk_flashlight_2.png" type="Texture" id=18]
[ext_resource path="res://textures/Player/Sprinte/walk_flashlight_3.png" type="Texture" id=19]
[ext_resource path="res://textures/Player/Sprinte/walk_flashlight_4.png" type="Texture" id=20]
[ext_resource path="res://textures/Player/Sprinte/walk_flashlight_5.png" type="Texture" id=21]
[ext_resource path="res://textures/Player/Sprinte/walk_flashlight_6.png" type="Texture" id=22]
[ext_resource path="res://textures/Player/Sprinte/walk_flashlight_7.png" type="Texture" id=23]
[ext_resource path="res://textures/Player/Sprinte/run_0.png" type="Texture" id=24]
[ext_resource path="res://textures/Player/Sprinte/run_1.png" type="Texture" id=25]
[ext_resource path="res://textures/Player/Sprinte/run_2.png" type="Texture" id=26]
[ext_resource path="res://textures/Player/Sprinte/run_3.png" type="Texture" id=27]
[ext_resource path="res://textures/Player/Sprinte/run_4.png" type="Texture" id=28]
[ext_resource path="res://textures/Player/Sprinte/run_5.png" type="Texture" id=29]
[ext_resource path="res://textures/Player/Sprinte/run_6.png" type="Texture" id=30]
[ext_resource path="res://textures/Player/Sprinte/run_7.png" type="Texture" id=31]
[ext_resource path="res://textures/Player/Sprinte/run_8.png" type="Texture" id=32]
[ext_resource path="res://textures/Player/Sprinte/run_9.png" type="Texture" id=33]
[ext_resource path="res://textures/Player/Sprinte/run_10.png" type="Texture" id=34]
[ext_resource path="res://textures/Player/Sprinte/run_11.png" type="Texture" id=35]
[ext_resource path="res://textures/Player/Sprinte/idle_flashlight_0.png" type="Texture" id=36]
[ext_resource path="res://textures/Player/Sprinte/idle_flashlight_1.png" type="Texture" id=37]
[ext_resource path="res://textures/Player/Sprinte/idle_flashlight_2.png" type="Texture" id=38]
[ext_resource path="res://textures/Player/Sprinte/idle_flashlight_3.png" type="Texture" id=39]
[ext_resource path="res://textures/Player/Sprinte/idle_flashlight_4.png" type="Texture" id=40]
[ext_resource path="res://textures/Player/Sprinte/idle_flashlight_5.png" type="Texture" id=41]
[ext_resource path="res://textures/light lantern.png" type="Texture" id=42]
[ext_resource path="res://screens/HUD.tscn" type="PackedScene" id=43]
[ext_resource path="res://screens/HUDTouch.tscn" type="PackedScene" id=44]
[ext_resource path="res://screens/HUDColorScreen.tscn" type="PackedScene" id=45]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "walk_flashlight",
"speed": 6.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": true,
"name": "fast",
"speed": 8.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "idle_flashlight",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 6.87851
height = 32.4369

[node name="player" type="KinematicBody2D"]

position = Vector2( 260.902, 510 )
scale = Vector2( 2.5, 2.5 )
input_pickable = false
collision_layer = 1
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
Speed = 25
Runspeed = 300

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 0, -4.4 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "idle_flashlight"
frame = 5
playing = true
_sections_unfolded = [ "Animation", "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="1"]

position = Vector2( 0, -18.8 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 3.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit", "Smoothing", "Transform" ]

[node name="CollisionShape2DIdle" type="CollisionShape2D" parent="." index="2"]

position = Vector2( -0.4, -1.6 )
shape = SubResource( 2 )

[node name="Light2DRight" type="Light2D" parent="." index="3"]

position = Vector2( 4, -6.8 )
scale = Vector2( 0.3, 0.44 )
enabled = true
editor_only = false
texture = ExtResource( 42 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 0.75, 0.75, 0.75, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0.292969, 0.291824, 0.291824, 0.00392157 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Shadow", "Transform", "Z Index" ]

[node name="Light2DLeft" type="Light2D" parent="." index="4"]

position = Vector2( -4, -6.8 )
rotation = 3.14159
scale = Vector2( 0.3, 0.44 )
enabled = false
editor_only = false
texture = ExtResource( 42 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 0.74902, 0.74902, 0.74902, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0.292969, 0.291824, 0.291824, 0.00392157 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Shadow", "Transform", "Z Index" ]

[node name="HUD" parent="." index="5" instance=ExtResource( 43 )]

[node name="HUDTouch" parent="." index="6" instance=ExtResource( 44 )]

layer = 2

[node name="HUDColorScreen" parent="." index="7" instance=ExtResource( 45 )]

layer = 3

[node name="Pos2D_R_light_idle" type="Position2D" parent="." index="8"]

position = Vector2( 4, -4.4 )
_sections_unfolded = [ "Transform" ]

[node name="Pos2D_L_light_idle" type="Position2D" parent="." index="9"]

position = Vector2( -4, -4.4 )
_sections_unfolded = [ "Transform" ]

[node name="Pos2D_R_light_walk" type="Position2D" parent="." index="10"]

position = Vector2( 4, -6.8 )
_sections_unfolded = [ "Transform" ]

[node name="Pos2D_L_light_walk" type="Position2D" parent="." index="11"]

position = Vector2( -4, -6.8 )
_sections_unfolded = [ "Transform" ]


